# aggra

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aggra/: __init__.py
aggra/app/: base.py
aggra/core/: config.py
aggra/utils/: logger.py
exmaple/: app.py
