[tool.poetry]
name = "aggra"
version = "0.1.0"
description = ""
authors = ["zhiwen.wang <zhiwen.wang@airudder.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
